download/archives/1.7.4/index.markdown
---
author: Gabriel Burt
comments: false
date: 2010-08-11 20:29:25+00:00
layout: page
slug: 1-7-4
title: Banshee 1.7.4
wordpress_id: 628
---


	
  * **Release Date:** August 11, 2010

	
  * **Source Tarball:** [banshee-1-1.7.4.tar.bz2](http://download.banshee-project.org/banshee/unstable/1.7.4/banshee-1-1.7.4.tar.bz2)

	
  * **Release Information:**
[NEWS](http://download.banshee-project.org/banshee/unstable/1.7.4/banshee-1-1.7.4.news),
[sha256sum](http://download.banshee-project.org/banshee/unstable/1.7.4/banshee-1-1.7.4.sha256sum)




[![Download Now](/theme/css/images/download-button.png)](/download)





Banshee 1.7.4 is part of the active-development 1.7 series, leading up to a
    1.8 maintenance series release in the fall.  It contains many new features
    and a number of enhancements and bug fixes.





### New Features Since 1.7.3





#### User Manual





A user manual is now available from the **Help -> Contents** menu item, or via _F1_.  Learn about Banshee's features and how to best use them, shortcuts, and more!





### Other Enhancements





    
  * Duplicate Genre solver in Metadata Fixup extension

    
  * Support for Amazon MP3 purchases containing PDFs and videos

    
  * Improved Metadata Fixup support for non-English languages





### Notable Bug Fixes (45 fixed since 1.7.3!)






  * [bgo#588255](http://bugzilla.gnome.org/show_bug.cgi?id=588255): Fix notification icon transparency


  * [bgo#619036](http://bugzilla.gnome.org/show_bug.cgi?id=619036): Fix glitchy search entry


  * [bgo#625210](http://bugzilla.gnome.org/show_bug.cgi?id=625210): Better handling of non-US Amazon stores


  * [bgo#624569](http://bugzilla.gnome.org/show_bug.cgi?id=624569): Fix scrolling Extensions list with keyboard


  * [bgo#625340](http://bugzilla.gnome.org/show_bug.cgi?id=625340): Fix .amz mime file conflict with official downloader


  * [bgo#553433](http://bugzilla.gnome.org/show_bug.cgi?id=553433): Fix issue that could block song scrobbling


  * [bgo#600340](http://bugzilla.gnome.org/show_bug.cgi?id=600340): Fix subscribing to certain podcasts (eg podbean.com)


  * [bgo#620826](http://bugzilla.gnome.org/show_bug.cgi?id=620826): Fix URIs of tracks synced to iPods


  * [bmc#1115](http://bugs.meego.com/show_bug.cgi?id=1115):   Fix a pipeline deadlock evident on MeeGo




#### Banshee has a lot more to offer! Check out the previous major release notes...





	
  * [Read about features added in Banshee 1.7.3](/download/archives/1.7.3)

	
  * [Read about features added in Banshee 1.7.2](/download/archives/1.7.2)

	
  * [Read about features added in Banshee 1.7.1](/download/archives/1.7.1)

	
  * [Read about features added in Banshee 1.7.0](/download/archives/1.7.0)

	
  * [Read about features added in Banshee 1.6.0](/download/archives/1.6.0)




### Dependencies





	
  * Mono 1.9.1 (.NET 2.0 Profile / gmcs)

	
  * SQlite 3.4

	
  * Gtk# 2.12

	
  * GStreamer 0.10.13

	
  * NDesk DBus (ndesk-dbus) 0.5

	
  * NDesk DBus GLib (ndesk-dbus-glib) 0.3

	
  * Mono.Addins (mono-addins) 0.3.1

	
  * TagLib# (taglib-sharp) >= 2.0.3.7

	
  * Required to build default feature stack:

	
    * libmtp >= 0.2.0

	
    * ipod-sharp >= 0.8.5

	
    * mono-zeroconf >= 0.8.0

	
    * boo >= 0.8.1

    
    * webkit-1.0 >= 1.2.2

    
    * gdata-sharp >= 1.4




	
  * Run-time requirements for default feature stack:

	
    * HAL

	
    * podsleuth >= 0.6.6

	
    * brasero

	
    * avahi







### Community





#### Contributors For This Release


The following people directly contributed to the release of this version of Banshee. Without their help, there would be no release!


> 
      Aaron Bockover, Alexander Kojevnikov, Andrés G. Aragoneses,
      Benjamín Valero Espinosa, Bertrand Lorentz, David Nielsen, Gabriel Burt,
      Paul Cutler, Ruben Vermeersch



The following people contributed updated translations to this release.    Without them, our project's reach would be much more limited.


> 
      Andrej Žnidarši?, Aron Xu, Benjamín Valero Espinosa, Cheng-Chia Tseng,
      Mario Blättermann, Petr Kovar, Ville-Pekka Vainio





#### Contributors In Past Releases




> 
    Aaron Bockover, Alan McGovern, Alex Bennee, Alex Kloss, Alex Launi,
    Alex Mauer, Alexander Hixon, Alexander Kojevnikov, Alexandros Frantzis,
    Alp Toker, Anders Petersson, Andrea Cimitan, Andreas Neustifter,
    Andreas Nilsson, Andrew Conkling, Andrés G. Aragoneses, Andy Midgette,
    Arthur Carli, Arun Raghavan, Aurélien Mino, Aydemir Ula? ?ahin,
    Ben Maurer, Benjamín Valero Espinosa, Bertrand Lorentz, Bertrand Lorentz,
    Bill Dawson, Bob Copeland, Bojan Rajkovic, Brad Taylor, Brandon Perry,
    Brian Lucas, Brian Nickel, Brian Teague, Chow Loong Jin, Chris Howie,
    Chris Jones, Chris Lahey, Chris Toshok, Chris Turchin, Christian Hergert,
    Christian Krause, Christoph Burgdorf, Christopher James Halse Rogers,
    Claude Paroz, Cody Russell, Cosmin Banu, Dan Wilson, Dan Winship,
    Daniel Munkton, Daniel Siegel, David Spreen, David Stone,
    Diego E. Pettenò, Eitan Isaacson, Elena Grassi, Eoin Hennessy,
    Eric Butler, Erik Schmidt, Fabian Jost, Felipe Almeida Lessa,
    Fernando Casanova, Florent Thoumie, Fredrik Hedberg, Félix Velasco,
    Gabriel Burt, Garrett LeSage, Götz Waschk, Haitao Feng,
    Hans Petter Jansson, Harold Schreckengost, Iain Lane,
    Igor Guerrero Fonseca, Ilya Konstantinov, Ivan N. Zlatev, Jack Deslippe,
    Jakub Steiner, James Willcox, Jan Arne Petersen, Jason Conti, Jason Taylor,
    Jeff Tickle, Jeff Wheeler, Jensen Somers, Jeroen Budts, Jo Shields,
    Johannes Kuhn, John Millikin, Jordi Mas, Jorge Castro, Julien Moutte,
    Juri Pakaste, Ján Sokoly, Jérémie Laval, K. Vishnoo Charan Reddy,
    Ken Vandine, Kevin Duffus, Konstantin Oshiyko, Larry Ewing,
    Lauri Kotilainen, Lukas Lipka, Marijn Ros, Matt Enright, Michael Kaiser,
    Michael Martin-Smucker, Michael Monreal, Michael Monreal, Micha? Sawicz,
    Miguel de Icaza, Mike Gemünde, Mike Urbanski, Moritz Schallaböck,
    Nathan Palmer, Neil Loknath, Nicholas Doyle, Nicholas Parker,
    Nicolò Chieffo, Nils Naumann, Oben Sonne, Olivier Duff, Oscar Forero,
    Pacho Ramos, Patrick van Staveren, Paul Cutler, Paul Lange, Pavel Antonov,
    Pepijn van de Geer, Peter de Kraker, Pratik Patel, Przemys?aw Grzegorczyk,
    Robin Stocker, Roderich Schupp, Romain Tartière, Ruben Vermeersch,
    Ryan Collier, Sandy Armstrong, Scott Peterson, Sebastian Dröge,
    Shaun McCance, Tim Yamin, Tobias Mueller, Todd Berman, Travis Glenn Hansen,
    Travis Reitter, Trey Ethridge, Valentin Sawadski, Will Farrington,
    William Pettersson, Wouter Bolsterlee





#### Reporting Bugs, Joining the Community


If you encounter any bad behavior with this release, please do not hesitate to [file bugs](/contribute/file-bugs/)!

We welcome new contributors - developers, translators, artists, writers, support gurus - to join our community.  [Join us!](/contribute)

